<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <TextView
        android:id="@+id/menuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_settingsmenu"
        android:textSize="24sp"
        android:textColor="#ffffffff"
    />
    <RelativeLayout
        android:id="@+id/spinnerContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
    >
        <TextView
            android:id="@+id/temperatureOptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentLeft="true"
            android:text="@string/app_config_unit"
            android:textSize="16sp"
            android:textColor="#ffffffff"
        />
        <Spinner
            android:id="@+id/temperatureOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:entries="@array/app_config_unit_options"
            android:prompt="@string/app_config_unit"
        />
    </RelativeLayout>
    <Switch
        android:id="@+id/geolocationOption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_config_geo"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
    >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_save"
            android:id="@+id/saveButton"
            android:onClick="saveConfiguration"
            android:layout_weight="0.50"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cancel"
            android:id="@+id/cancelButton"
            android:onClick="returnToApplication"
            android:layout_weight="0.50"
        />
    </LinearLayout>
</LinearLayout>