<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
    <!-- Logo -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:scaleType="center"
        android:adjustViewBounds="true"
        android:src="@drawable/splash"
        android:layout_gravity="center_horizontal"/>

    <!-- Wrap text in a padded container -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:id="@+id/applicationAboutName"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_version"
            android:id="@+id/applicationAboutVersion"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:text="@string/app_description"
            android:id="@+id/applicationAboutDescription"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="1"
    >
        <!-- Return button -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/app_return"
            android:id="@+id/btnReturnApplication"
            android:onClick="returnToApplication"
        />
        <!-- GitHub Project button -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/app_github_label"
            android:id="@+id/btnGoToGitHub"
            android:onClick="goToGitHubProject"
        />
    </LinearLayout>
</LinearLayout>