<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/menuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_addlocation"
        android:textSize="24sp"
        android:textColor="#ffffffff"
    />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_location_hint"
        android:id="@+id/locationField"
        android:inputType="text"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_location_geo"
        android:id="@+id/addCurrentLocationButton"
        android:onClick="getLocation"
        android:layout_gravity="center_horizontal"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="1"
    >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_add"
            android:id="@+id/addLocationButton"
            android:onClick="saveLocation"
            android:layout_weight="0.5"
        />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_cancel"
            android:id="@+id/cancelLocationButton"
            android:onClick="returnToApplication"
            android:layout_weight="0.5"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/geoStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text=""
    />
</LinearLayout>